# Flask-AppBuilder

./: .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  1.txt  2to3.txt  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  NOTE.txt  README.md  README.rst  RELEASE.rst  TODO.txt  babel_extract.sh  babel_init.sh  docker-compose.yml  flask_appbuilder_3.txt  full_upload.sh  git_download.sh  git_upload.sh  history.md  init_app.py  package-lock.json  package.json  pr-description.md  pyproject.toml  release.sh  requirements-dev.txt  requirements-extra.txt  requirements-mongodb.txt  requirements.txt  rtd_requirements.txt  run.py  setup.cfg  (+3 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  prlint.json  stale.yml
.github/workflows/: ci.yml  codeql-analysis.yml  lib.sh  odbcinst.init  prlint.yml  ptlint.yml  python.yml
babel/: messages.pot  messages.pot.bk  messages.pot~
db_repository/: migrate.cfg
docs/: .readthedocs.yaml  Makefile  actions.rst  addons.rst  advanced.rst  api.rst  breaking.rst  cli.rst  conf.py  config.rst  costumizing.rst  customizing.rst  diagrams.rst  fabmanager.rst  generic_datasource.rst  i18n.rst  index.rst  instalation.rst  installation.rst  intro.rst  make.bat  multipledbs.rst  quickcharts.rst  quickfiles.rst  quickhowto.rst  quickhowto_mongo.rst  quickminimal.rst  relations.rst  rest_api.rst  security.rst  templates.rst  user_registration.rst  versionmigration.rst  versions.rst  views.rst
docs/_templates/: layout.html
docs/_themes/: flask_theme_support.py
examples/: README.rst  __init__.py
examples/base_api/: README.rst  config.py  run.py
examples/base_filters/: NAMES.DIC  README.rst  testdata.py
examples/basefilter/: README.rst  config.py  testdata.py
examples/cas/: config.py
examples/composite_keys/: README.rst  config.py  testdata.py
examples/contactsapp/: init_app.py  run.py
examples/crud_rest_api/: README.rst  config.py  run.py  testdata.py
examples/dash/: README.rst  config.py
examples/employees/: 1.sql  README.rst  app.db  config.py
examples/employees_with_masked_field/: README.rst
examples/employees_with_masked_fields/: README.rst  config.py
examples/enums/: config.py  testdata.py
examples/extendsecurity/: README.rst  config.py  testdata.py
examples/extendsecurity2/: README.rst  config.py  testdata.py
examples/factoryapp/: README.rst  config.py  config2.py  testdata.py
examples/issue_169/: testdata.py
examples/issue_186/: config.py
examples/issue_188/: config.py
examples/issue_789/: Pipfile  (+3 more)
flask_appbuilder/: .landscape.yaml  __init__.py  _compat.py  actions.py  api.py  babel.py  base.py  baseapp.py  basemanager.py  baseviews.py  cli.py  console.py  const.py  exceptions.py  extensions.py  fields.py  fieldwidgets.py  filemanager.py  filters.py  forms.py  hooks.py  menu.py  messages.py  upload.py  urltools.py  validators.py  version.py  views.py  widgets.py
requirements/: base.txt  base_legacy.txt  dev.in  dev.txt  docs.in  docs.txt  extra.in  extra.txt  mongodb.txt  openid.in  openid.txt  tests.in  tests.txt
requirements-fe/: package-lock.json  package.json
scripts/: babel_extract.sh  babel_init.sh  copy_fe_dependencies.sh  create_release.py  db_create.py  db_migrate.py  db_upgrade.py  init_app.py
tests/: base.py  config_oauth.py  config_oid.py  config_security_api.py  config_security_cli.py  const.py  test_addon.py  test_api.py  test_custom_indexview.py  test_detached_user.py  test_fab_cli.py  test_forms.py  test_hooks.py  test_json_coverage_fixes.py  test_json_edge_cases.py  test_json_mongoengine.py  test_json_support.py  test_menu.py  test_mongoengine.py  test_mvc.py  test_mvc_oauth.py  test_mvc_oid.py  test_security_api.py  test_security_manager.py  test_security_permissions.py  test_security_signals.py  test_sqlalchemy.py  test_urltools.py
(+833 files in other folders)
